13 April 2024 v543: Topbar: Fixed: Text sometimes wrapped.

--- a/main.css
+++ b/main.css
@@ -397,6 +397,7 @@ h2, .pageSubTitleFont, .sectionTitle {
   align-items: center;
   padding: 3px;
   background-color: #000;
+  white-space: nowrap;
 }
 
 .searchBar {
